# pa_slot

./: .gitignore  LICENSE  Makefile  README.md  pa_slot.cabal  slot-lambda.cabal
Syntax/: Slot.hs
examples/: t0.hs
