name:                slot-lambda
version:             0.1.0.0
synopsis:            \_ + _  =  \x y -> x+y
-- description:         
license:             MIT
license-file:        LICENSE
author:              ducis
maintainer:          ducis_cn@126.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Syntax.Slot
  other-extensions:    TemplateHaskell, QuasiQuotes
  build-depends:       base >=4.6, template-haskell >=2.8, haskell-src-meta>=0.6.0.5, syb>=0.4.1, vector>=0.10.9.1, haskell-src-exts >= 1.14.0.1, containers >= 0.5.0.0
  default-language:    Haskell2010

